@@ -1,3 +1,7 @@
+2010-05-12  Ramon Novoa  <rnovoa@artica.es>
+
+	* build.sh: Added to repository. Pandora Agent installer build script.
+
 2010-04-23  Sancho Lerena <slerena@artica.es>
 
 	* bin/pandora_agent.conf: Updated sample conf with some examples of
